fix misaligned socials link on small screens

--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,4 @@ a:hover {
         margin: 0 30px;
     }
 
-    ul {
-        margin: 0 30px;
-    }
-
 }
